fix: fixing sonar issues